// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoForcedTooltip should display element tooltip on mouse click 1`] = `
<div>
  <div>
    <span
      class=""
      data-mui-internal-clone-element="true"
      style="padding: 8px; vertical-align: middle; text-align: center; display: inline-flex;"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M13,9H11V7H13M13,17H11V11H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`InfoForcedTooltip should display element tooltip on mouse click 2`] = `
<div>
  <div>
    <span
      aria-labelledby=":r3:"
      class=""
      data-mui-internal-clone-element="true"
      style="padding: 8px; vertical-align: middle; text-align: center; display: inline-flex;"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M13,9H11V7H13M13,17H11V11H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
        />
      </svg>
    </span>
    <div
      class="MuiTooltip-popper MuiTooltip-popperInteractive css-yem0l2-MuiPopper-root-MuiTooltip-popper MuiPopper-root"
      data-popper-escaped=""
      data-popper-placement="bottom"
      data-popper-reference-hidden=""
      id=":r3:"
      role="tooltip"
      style="position: absolute; top: 0px; left: 0px; margin: 0px; transform: translate(0px, 0px);"
    >
      <div
        class="MuiTooltip-tooltip MuiTooltip-tooltipPlacementBottom css-ja5taz-MuiTooltip-tooltip"
        style="opacity: 1; transform: scale(1, 1); transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 133ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      >
        fake-tooltip
      </div>
    </div>
  </div>
</div>
`;

exports[`InfoForcedTooltip should display element tooltip on mouse over only 1`] = `
<div>
  <div>
    <span
      class=""
      data-mui-internal-clone-element="true"
      style="padding: 8px; vertical-align: middle; text-align: center; display: inline-flex;"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M13,9H11V7H13M13,17H11V11H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`InfoForcedTooltip should display element tooltip on mouse over only 2`] = `
<div>
  <div>
    <span
      aria-labelledby=":r2:"
      class=""
      data-mui-internal-clone-element="true"
      style="padding: 8px; vertical-align: middle; text-align: center; display: inline-flex;"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M13,9H11V7H13M13,17H11V11H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
        />
      </svg>
    </span>
    <div
      class="MuiTooltip-popper MuiTooltip-popperInteractive css-yem0l2-MuiPopper-root-MuiTooltip-popper MuiPopper-root"
      data-popper-escaped=""
      data-popper-placement="bottom"
      data-popper-reference-hidden=""
      id=":r2:"
      role="tooltip"
      style="position: absolute; top: 0px; left: 0px; margin: 0px; transform: translate(0px, 0px);"
    >
      <div
        class="MuiTooltip-tooltip MuiTooltip-tooltipPlacementBottom css-ja5taz-MuiTooltip-tooltip"
        style="opacity: 1; transform: scale(1, 1); transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 133ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      >
        fake-tooltip
      </div>
    </div>
  </div>
</div>
`;

exports[`InfoForcedTooltip should display element tooltip on mouse over only 3`] = `
<div>
  <div>
    <span
      class=""
      data-mui-internal-clone-element="true"
      style="padding: 8px; vertical-align: middle; text-align: center; display: inline-flex;"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M13,9H11V7H13M13,17H11V11H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`InfoForcedTooltip should display text tooltip on mouse click 1`] = `
<div>
  <div>
    <span
      class=""
      data-mui-internal-clone-element="true"
      style="padding: 8px; vertical-align: middle; text-align: center; display: inline-flex;"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M13,9H11V7H13M13,17H11V11H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`InfoForcedTooltip should display text tooltip on mouse over only 1`] = `
<div>
  <div>
    <span
      class=""
      data-mui-internal-clone-element="true"
      style="padding: 8px; vertical-align: middle; text-align: center; display: inline-flex;"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M13,9H11V7H13M13,17H11V11H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`InfoForcedTooltip should display text tooltip on mouse over only 2`] = `
<div>
  <div>
    <span
      aria-labelledby=":r1:"
      class=""
      data-mui-internal-clone-element="true"
      style="padding: 8px; vertical-align: middle; text-align: center; display: inline-flex;"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M13,9H11V7H13M13,17H11V11H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
        />
      </svg>
    </span>
    <div
      class="MuiTooltip-popper MuiTooltip-popperInteractive css-yem0l2-MuiPopper-root-MuiTooltip-popper MuiPopper-root"
      data-popper-escaped=""
      data-popper-placement="bottom"
      data-popper-reference-hidden=""
      id=":r1:"
      role="tooltip"
      style="position: absolute; top: 0px; left: 0px; margin: 0px; transform: translate(0px, 0px);"
    >
      <div
        class="MuiTooltip-tooltip MuiTooltip-tooltipPlacementBottom css-ja5taz-MuiTooltip-tooltip"
        style="opacity: 1; transform: scale(1, 1); transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 133ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      >
        fake-tooltip
      </div>
    </div>
  </div>
</div>
`;

exports[`InfoForcedTooltip should display text tooltip on mouse over only 3`] = `
<div>
  <div>
    <span
      class=""
      data-mui-internal-clone-element="true"
      style="padding: 8px; vertical-align: middle; text-align: center; display: inline-flex;"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M13,9H11V7H13M13,17H11V11H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
        />
      </svg>
    </span>
  </div>
</div>
`;
